--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.31'
-    
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.0-M1'
     testImplementation 'org.junit.platform:junit-platform-runner:1.5.0-M1'
     testImplementation 'org.junit.platform:junit-platform-suite-api:1.5.0-M1'
@@ -23,4 +23,9 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+test {
+    useJUnitPlatform()
+    testLogging.showStandardStreams = true
 }
